# stella

./: .gitignore  Cargo.toml  README.md  guide.md  rustfmt.toml  stella
.github/workflows/: codspeed.yml  performance.yml  test.yml
benches/: checker_benchmark.rs  lexer_benchmark.rs  parser_benchmark.rs
exemples/: declaration.lua
src/: cli.rs  formatting.rs  lib.rs  main.rs
src/ast/: ast.rs  tokens.rs
src/checker/: assign_variables.rs  binding.rs  check_assign_expression.rs  check_assign_statement.rs  check_binary_expression.rs  check_block_statement.rs  check_call_expression.rs  check_declaration_statement.rs  check_empty_statement.rs  check_expression.rs  check_expression_statement.rs  check_for_statement.rs  check_function_expression.rs  check_function_statement.rs  check_generic.rs  check_grouped_expression.rs  check_identifier.rs  check_identifier_expression.rs  check_if_statement.rs  check_index_expression.rs  check_literal_expression.rs  check_local_statement.rs  check_member_expression.rs  check_repeat_statement.rs  check_require_expression.rs  check_return_statement.rs  check_shadowing.rs  check_statement.rs  check_stdlib.rs  check_table_expression.rs  check_type.rs  check_type_declaration.rs  check_type_statement.rs  check_unary_expression.rs  check_unused_variables.rs  check_variable_declaration.rs  check_while_statement.rs  checker.rs  declare_variables.rs  mod.rs  (+2 more)
src/context/: context.rs
src/diagnostics/: diagnostics.rs  format.rs  format_awesome.rs  mod.rs  report.rs
src/emit/: emitter.rs  mod.rs
src/lexer/: lexer.rs
src/modules/: loader.rs  mod.rs  resolver.rs
src/parser/: mod.rs  parser.rs  precedence.rs
src/stdlib/: io_type.rs  math.rs  mod.rs  number.rs  print.rs  string.rs  table.rs
src/types/: match_type.rs  mod.rs
src/utils/: location.rs  mod.rs  range.rs
tests/: snapshot_tests.rs
tests/golden_tests/: assign_expression.lua  boolean_logic.lua  conditional_statement.lua  fibonacci.lua  for_loop.lua  function_definition.lua  function_inference.lua  nested_functions.lua  simple_declaration.lua  table_definition.lua  table_inference.lua  variable_declaration.lua  while_loop.lua
tests/golden_tests/types/: binary_expressions.lua  builtin_table.lua  conditional_statements.lua  either.lua  enum.lua  function_as_type.lua  function_types.lua  generic_arrays.lua  generic_functions.lua  generic_structures.lua  generic_with_constraints.lua  multiple_generic_parameters.lua  nested_functions.lua  optional_types.lua  simple_functions.lua  type_inference.lua  typed_arrays.lua  uninitialized_variables.lua  union_types.lua  variables.lua
tests/playground/algorithms/: binart_search_untype.lua  binary_search.lua  bubble_sort.lua  factorial.lua  fibonacci.lua  merge_sort.lua  process_list.lua
tests/snapshots/: lexer_assign_expression.snap  lexer_boolean_logic.snap  lexer_conditional_statement.snap  lexer_declaration.snap  lexer_fibonacci.snap  lexer_for_loop.snap  lexer_function_definition.snap  lexer_function_inference.snap  lexer_nested_functions.snap  lexer_simple_declaration.snap  lexer_table_definition.snap  lexer_table_inference.snap  lexer_variable_declaration.snap  lexer_while_loop.snap  parser_assign_expression.snap  parser_boolean_logic.snap  parser_conditional_statement.snap  parser_fibonacci.snap  parser_for_loop.snap  parser_function_definition.snap  parser_function_inference.snap  parser_nested_functions.snap  parser_simple_declaration.snap  parser_variable_declaration.snap  parser_while_loop.snap  snapshot_tests__lexer_tokens.snap
