[package]
name = "stella"
description = "Rust-based, speedy Lua type checker"
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
code_highlighter = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
codspeed = "2.6.0"
criterion = "0.5.1"
glob = "0.3.1"
insta = { version = "1.39.0", features = ["ron"] }

[profile.release]
opt-level = "z"   # Otimizar para o menor tamanho possível, use "3" para agressividade máxima
debug = false     # Não incluir informações de depuração
lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
panic = "abort"   # Abortar no caso de pânico, em vez de desempilhar
codegen-units = 1 # Reduzir o número de unidades de geração de código para melhorar a otimização

[[bench]]
name = "stella_lexer_benchmark"
path = "benches/lexer_benchmark.rs"

[[bench]]
name = "stella_parser_benchmark"
path = "benches/parser_benchmark.rs"

[[bench]]
name = "stella_checker_benchmark"
path = "benches/checker_benchmark.rs"
