[package]
name = "stella"
description = "Rust-based, speedy Lua type checker"
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
code_highlighter = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
codspeed = "2.6.0"
codspeed-criterion-compat = "2.6.0"
criterion = "0.5.1"
glob = "0.3.1"
insta = { version = "1.39.0", features = ["ron"] }

[profile.release]
lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
opt-level = 3
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false     # set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
# Profile for `cargo coverage`
[profile.coverage]
inherits = "release"
lto = "thin"            # Faster compile time with thin lto
debug-assertions = true # Make sure `debug_assert!`s pass

[[bench]]
name = "stella_lexer_benchmark"
path = "benches/lexer_benchmark.rs"

[[bench]]
name = "stella_parser_benchmark"
path = "benches/parser_benchmark.rs"

[[bench]]
name = "stella_checker_benchmark"
path = "benches/checker_benchmark.rs"
